5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1601_1803.log
== TEST (2019-03-27 12:35:46) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2 = (var1 - p1)//100
print(p1)
print(p2)
-- OUTPUT:
2
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:36:10) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2 = (var1 - p1)//1000
print(p1)
print(p2)
-- OUTPUT:
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:37:48) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1)//100
print(p1)
print(p2)
-- OUTPUT:
2
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:38:16) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*)//100
print(p1)
print(p2)
-- ERROR:
File "XXXX", line 3
    p2= (var1 - p1*)//100
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:38:24) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
print(p1)
print(p2)
-- OUTPUT:
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:40:16) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
p3= (var1 -(p1*1000+p2*100))//10
print(p1)
print(p2)
print(p3)
-- OUTPUT:
2
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:41:33) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
p3= (var1 -(p1*1000+p2*100))//10
p4 =var1%1000
print(p1)
print(p2)
print(p3)
print(p4)
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:42:25) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
p3= (var1 -(p1*1000+p2*100))//10
p4 =(var1%1000) - (p2*100+p3*10)
print(p1)
print(p2)
print(p3)
print(p4)
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:44:12) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
p3= (var1 -(p1*1000+p2*100))//10
p4 =(var1%1000) - (p2*100+p3*10)
resultado = (p1*5 + p2*4 + p3*3 +p4*2)%11
print(resultado)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 12:44:21) 
-- CODE:
var1 = int(input("digite um numero de 4 digitos"))
p1= var1//1000
p2= (var1 - p1*1000)//100
p3= (var1 -(p1*1000+p2*100))//10
p4 =(var1%1000) - (p2*100+p3*10)
resultado = (p1*5 + p2*4 + p3*3 +p4*2)%11
print(resultado)
-- EXECUTION TIME:
0.192778
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
